classic-with-waves/destination-rule.yml
# **NOTE**: this file is generated by `dhall-render`.
# You should NOT edit it manually, your changes will be lost.

---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  labels:
    product: support
    project: classic
    role: app-server
    role_group: app-server
    team: support
  name: classic-app-server-destinationrule
  namespace: classic
spec:
  host: classic.classic.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        connectTimeout: 1s
    loadBalancer:
      localityLbSetting:
        distribute:
        - from: "*"
          to:
            "*": 100
        enabled: true
    outlierDetection:
      baseEjectionTime: 30s
      consecutive5xxErrors: 0
      consecutiveLocalOriginFailures: 3
      interval: 30s
      maxEjectionPercent: 35
      splitExternalLocalOriginErrors: true
